@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix fatal errors if DAV support is disabled (Bug #12481).
 * [mjr] Fix requesting changes by modification sequence (Bug #12507, Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;).
  </notes>
  <contents>
@@ -1405,6 +1406,7 @@
    <date>2013-07-16</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix fatal errors if DAV support is disabled (Bug #12481).
 * [mjr] Fix requesting changes by modification sequence (Bug #12507, Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;).
    </notes>
   </release>
